--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -1,11 +1,9 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
+    <ion-title>Order Now</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <h2>All Menu</h2>
 </ion-content>
