--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Order Now" tabIcon="md-restaurant"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Cart" tabIcon="md-basket"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Orders" tabIcon="md-menu"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Account" tabIcon="md-person"></ion-tab>
 </ion-tabs>
