Created Track Page

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -37,7 +37,7 @@
           </button>
         </ion-col>
         <ion-col>
-          <button ion-button icon-left clear small>
+          <button ion-button icon-left clear small (click)="trackPage()">
           <div>Track Order</div>
           </button>
         </ion-col>
