Offers Page Template

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -14,7 +14,7 @@
     <p>+919884179675</p>
 	</ion-item-divider>
     <a (click)="addressPage()"><ion-item><ion-icon name="md-home" item-left></ion-icon>Manage Addresses</ion-item></a>
-    <a><ion-item><ion-icon name="md-pricetags" item-left></ion-icon>Offers</ion-item></a>
+    <a (click)="offersPage()"><ion-item><ion-icon name="md-pricetags" item-left></ion-icon>Offers</ion-item></a>
   </ion-item-group>
   <ion-item-group center>
 	<button ion-button block>Logout</button>	
