--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -33,43 +33,22 @@
 <ion-content>
   <ion-list>
 
-    <ion-item-group>
+    <ion-item-group >
 
-      <ion-item-divider sticky>
+      <ion-item-divider sticky *ngFor="let item of menulist" (click)="submenu(item)">
         <ion-label>
-         Starters
+         {{ item.mainName }}
         </ion-label>
       </ion-item-divider>
 
-      <ion-item-sliding>
+      <!-- <ion-item-sliding *ngFor="let i of sub.items">
 
         <button ion-item>
-          <h3>Chicken Lollipop</h3>
-          <p>Rs.300
-          </p>
+          <h3>{{ i.itemName }}</h3>
+          <p><i primary class="fa fa-inr"></i>{{ i.itemPrice }}</p>
         </button>
 
-      </ion-item-sliding>
-
-    </ion-item-group>
-
-    <ion-item-group>
-
-      <ion-item-divider sticky>
-        <ion-label>
-          Main Course
-        </ion-label>
-      </ion-item-divider>
-
-      <ion-item-sliding>
-
-        <button ion-item>
-          <h3>Poori Bhaji</h3>
-          <p>Rs.100
-          </p>
-        </button>
-
-      </ion-item-sliding>
+      </ion-item-sliding> -->
 
     </ion-item-group>    
 
