--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -29,7 +29,7 @@
     </ion-row>
     <ion-row>
 		  <ion-col right text-right>
-			   <p><ion-icon name="md-remove-circle" (click)="minusFunction(1001)"></ion-icon> {{ item.itemQuantity }} <ion-icon name="md-add-circle" (click)="addFunction(1001)"></ion-icon></p>
+			   <p><ion-icon name="md-remove-circle" (click)="minusFunction(item.itemCode)"></ion-icon> {{ item.itemQuantity }} <ion-icon name="md-add-circle" (click)="addFunction(item.itemCode)"></ion-icon></p>
       </ion-col>
 	  </ion-row>
     </ion-item>
