--- a/src/pages/menu/submenu/submenu.html
+++ b/src/pages/menu/submenu/submenu.html
@@ -18,7 +18,7 @@
 
       <ion-item-sliding *ngFor="let j of i.items">
 
-        <button ion-item (click)="addToCart(1000,'item',100,'type')">
+        <button ion-item (click)="addToCart(j.itemCode,j.itemName,j.itemPrice,j.itemVariety)">
           <h3>{{j.itemName}}</h3>
           <p><i primary class="fa fa-inr"></i>{{j.itemPrice}}</p>
         </button>
