--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -3,39 +3,22 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-
-    <ion-segment>
-      <ion-segment-button value="starters">
-        Starters
-      </ion-segment-button>
-      <ion-segment-button value="veg_main">
-        Veg. Main Course
-      </ion-segment-button>
-      <ion-segment-button value="nonveg_main">
-        Non Veg. Main Course
-      </ion-segment-button>
-    </ion-segment>
+    <ion-title>Order Now</ion-title>
 
     <ion-buttons end>
-      <button ion-button icon-only>
-        <ion-icon ios="ios-options-outline" md="md-options"></ion-icon>
+      <button ion-button icon-only (click)="searchpage()">
+        <ion-icon ios="ios-search" md="md-search"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
-
-  <ion-toolbar no-border-top>
-    <ion-searchbar color="primary"
-                   placeholder="Search">
-    </ion-searchbar>
-  </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list *ngFor="let item of menulist">
 
     <ion-item-group >
 
-      <ion-item-divider sticky *ngFor="let item of menulist" (click)="submenu(item)">
+      <ion-item-divider sticky (click)="submenu(item)">
         <ion-label>
          {{ item.mainName }}
         </ion-label>
