Crate Order, Add to cart from search, Order History

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -92,6 +92,6 @@
 	</ion-card-content>
 </ion-card>
 <ion-item>
-	<button ion-button block>CHECKOUT</button>	
+	<button ion-button block (click)="placeorder()">CHECKOUT</button>	
 </ion-item>
 </ion-content>
