--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -59,7 +59,7 @@
       <p><span *ngFor="let x of item.cart.items">{{x.itemName}} ({{x.itemQuantity}}),</span></p>
       <ion-row>
         <ion-col>
-         <button ion-button icon-left clear small (click)="orderdetailsPage()">
+         <button ion-button icon-left clear small (click)="orderdetailsPage(item)">
           <div>View Details</div>
           </button>
         </ion-col>
