--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -14,26 +14,11 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngFor="let item of menulist">
+  <ion-list>
 
-    <ion-item-group >
-
-      <ion-item-divider sticky (click)="submenu(item)">
-        <ion-label>
+      <ion-item-divider sticky *ngFor="let item of menulist" (click)="submenu(item)">
          {{ item.mainName }}
-        </ion-label>
       </ion-item-divider>
-
-      <!-- <ion-item-sliding *ngFor="let i of sub.items">
-
-        <button ion-item>
-          <h3>{{ i.itemName }}</h3>
-          <p><i primary class="fa fa-inr"></i>{{ i.itemPrice }}</p>
-        </button>
-
-      </ion-item-sliding> -->
-
-    </ion-item-group>    
 
   </ion-list>
 </ion-content>
